swagger documentation for fundand get wallet
