# storage/api-docs/api-docs.json
@@ -477,7 +477,7 @@
                 ]
             }
         },
-        "/api/v1/merchant/register": {
+        "/api/v1/merchant/signup": {
             "post": {
                 "tags": [
                     "Merchant"
@@ -772,7 +772,7 @@
                 ]
             }
         },
-        "/api/v1/user/register": {
+        "/api/v1/user/signup": {
             "post": {
                 "tags": [
                     "User"
@@ -992,6 +992,113 @@
                     },
                     "403": {
                         "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/user/get-wallet": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Get user wallet",
+                "operationId": "get user  wallet details",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/user/fund-wallet": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Fund wallet",
+                "operationId": "Fund wallet",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "amount"
+                                ],
+                                "properties": {
+                                    "amount": {
+                                        "type": "number"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "not found"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/user/verify-transaction": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Verify transaction",
+                "operationId": "Verify wallet transaction",
+                "parameters": [
+                    {
+                        "name": "trxref",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "reference",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
                     }
                 },
                 "security": [
